# mastering-structured-output

./: .gitignore  1-langchain-structured-output-examples.ipynb  2-langchain-structured-output-evaluation.ipynb  3-langchain-structured-output-examples-updated.ipynb  4-langchain-structured-output-evaluation-updated.ipynb  5-langchain-xml-output-examples.ipynb  6-langchain-xml-output-evaluation.ipynb  LICENSE  README.md  analyse_experiment.py  collate_and_test_results.ipynb  exp2-langchain-xml-output-evaluation.ipynb  exp3-langchain-xml-output-evaluation.ipynb  experiment_xml.py  hypothesis_testing.py  index.ipynb  pydantic_structure_definitions.py  pyproject.toml
.binder/: requirements.txt
Experiment Notebooks/: xml-exp2-langchain-xml-output-evaluation.ipynb  xml-exp4-langchain-xml-output-evaluation_temperature.ipynb  xml-exp6-langchain-xml-output-evaluation_user_parsers.ipynb
tests/: test_eval_xml_output.py  test_pickle_unpickle.py  test_xml_format.py
