[tool.poetry]
name = "mastering-structured-output"
version = "0.1.0"
description = "Mastering structured output with LangChain"
authors = ["Andrew Docherty <docherty@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "~3.12"
langchain = "^0.3.3"
ipykernel = "^6.29.5"
langchain-anthropic = "^0.2.3"
langchain-ollama = "^0.2.0"
streamlit = "^1.39.0"
pandas = "^2.2.3"
requests = "^2.32.3"
anthropic = "^0.36.0"
tabulate = "^0.9.0"
ipywidgets = "^8.1.5"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
